--- a/sampleapp/helm/templates/ingress-fe.yaml
+++ b/sampleapp/helm/templates/ingress-fe.yaml
@@ -7,10 +7,10 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: fe.kunal.com
+  - host: a3c2cfeea30754925bdbc08fdc1d41dd-8c2fbc507df78602.elb.eu-central-1.amazonaws.com
     http:
       paths:
-      - path: /
+      - path: /fe
         pathType: Prefix
         backend:
           service:
