--- a/sampleapp/helm/templates/deployment-be.yaml
+++ b/sampleapp/helm/templates/deployment-be.yaml
@@ -1,21 +1,21 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{.Values.name }}-be
-  namespace: {{.Values.namespace }}
-spec:
-  selector:
-    matchLabels:
-      app: {{.Values.name }}-be
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: {{.Values.name }}-be
-    spec:
-      containers:
-      - name: {{.Values.name }}-be
-        image: {{.Values.be.image }}:{{.Values.fe.tag }}
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: {{.Values.be.port }} 
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: {{.Values.name }}-be
+#   namespace: {{.Values.namespace }}
+# spec:
+#   selector:
+#     matchLabels:
+#       app: {{.Values.name }}-be
+#   replicas: 1
+#   template:
+#     metadata:
+#       labels:
+#         app: {{.Values.name }}-be
+#     spec:
+#       containers:
+#       - name: {{.Values.name }}-be
+#         image: {{.Values.be.image }}:{{.Values.fe.tag }}
+#         imagePullPolicy: IfNotPresent
+#         ports:
+#         - containerPort: {{.Values.be.port }} 
