--- a/sampleapp/helm/templates/ingress-fe.yaml
+++ b/sampleapp/helm/templates/ingress-fe.yaml
@@ -4,13 +4,13 @@ metadata:
   name: {{.Values.name }}-fe
   namespace: {{.Values.namespace }}
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx-internal
 spec:
   rules:
   - host: a3c2cfeea30754925bdbc08fdc1d41dd-8c2fbc507df78602.elb.eu-central-1.amazonaws.com
     http:
       paths:
-      - path: /fe
+      - path: /
         pathType: Prefix
         backend:
           service:
