--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -208,13 +208,13 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   labels: {}
-  path: /
+  path: /grafana
 
   # pathType is only for k8s >= 1.1=
   pathType: Prefix
 
   hosts:
-    - grafana.kunal.com
+    - a2a0f84efe0a24d3e8e6d90a5ef8aed7-79232029.eu-central-1.elb.amazonaws.com
   ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
   extraPaths: []
   # - path: /*
