--- a/nginx-ingress/fruits/mango.yaml
+++ b/nginx-ingress/fruits/mango.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-project
+  name: mango-project
 spec:
   type: ClusterIP
   ports:
@@ -10,32 +10,32 @@ spec:
     port: 80
     targetPort: 80
   selector:
-    app: nginx-project
+    app: mango-project
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-project
+  name: mango-project
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-project
+      app: mango-project
   template:
     metadata:
       labels:
-        app: nginx-project
+        app: mango-project
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: kunal2791/mango:v3
           ports:
             - containerPort: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-project
+  name: mango-project
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     kubernetes.io/ingress.class: nginx
@@ -44,10 +44,10 @@ spec:
     - host: a2a0f84efe0a24d3e8e6d90a5ef8aed7-79232029.eu-central-1.elb.amazonaws.com
       http:
         paths:
-          - path: /nginx
+          - path: /mango
             pathType: Prefix
             backend:
               service:
-                name: nginx-project
+                name: mango-project
                 port:
                   number: 80
