--- a/apps/apple.yaml
+++ b/apps/apple.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: canarydep
+  name: apple-project
   namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
