added demo projects

--- a/apps/mango.yaml
+++ b/apps/mango.yaml
@@ -9,8 +9,10 @@ spec:
   syncPolicy:
     automated:
       prune: true
+    syncOptions:
+    - CreateNamespace=true
   destination:
-    namespace: apple
+    namespace: mango
     server: 'https://kubernetes.default.svc'
   project: default
   source:
