--- a/apps/apple.yaml
+++ b/apps/apple.yaml
@@ -9,6 +9,8 @@ spec:
   syncPolicy:
     automated:
       prune: true
+    syncOptions:
+    - CreateNamespace=true
   destination:
     namespace: apple
     server: 'https://kubernetes.default.svc'
