--- a/observablity/Grafana/kube-prometheus-stack/values.yaml
+++ b/observablity/Grafana/kube-prometheus-stack/values.yaml
@@ -989,26 +989,26 @@ grafana:
 
   ## Configure additional grafana datasources (passed through tpl)
   ## ref: http://docs.grafana.org/administration/provisioning/#datasources
-  additionalDataSources:
-    - name: Loki
-      type: loki
-      url: http://loki.observability.svc.cluster.local:3100
-      access: proxy
-      jsonData:
-          derivedFields:
-            - datasourceUid: tempo
-              matcherRegex: ((\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+))
-              name: TraceID
-              url: $${__value.raw}
-          maxLines: 1000
-    - name: Tempo
-      type: tempo
-      url: http://tempo.observability.svc.cluster.local:3100
-      access: proxy
-    - name: Prometheus
-      type: prometheus
-      url: http://prod-kube-prometheus-stack-prometheus:9090
-      access: proxy
+  additionalDataSources: []
+    # - name: Loki
+    #   type: loki
+    #   url: http://loki.observability.svc.cluster.local:3100
+    #   access: proxy
+    #   jsonData:
+    #       derivedFields:
+    #         - datasourceUid: tempo
+    #           matcherRegex: ((\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+)(\d+|[a-z]+))
+    #           name: TraceID
+    #           url: $${__value.raw}
+    #       maxLines: 1000
+    # - name: Tempo
+    #   type: tempo
+    #   url: http://tempo.observability.svc.cluster.local:3100
+    #   access: proxy
+    # - name: Prometheus
+    #   type: prometheus
+    #   url: http://prod-kube-prometheus-stack-prometheus:9090
+    #   access: proxy
   # - name: prometheus-sample
   #   access: proxy
   #   basicAuth: true
