--- a/apps/ingress-controller.yaml
+++ b/apps/ingress-controller.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-prometheus-stack
+  name: ingress-controller
   namespace: default
 spec:
   destination:
@@ -10,7 +9,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: ./observablity/Grafana/kube-prometheus-stack/
+    path: ./ingress-nginx/charts/ingress-nginx/
     repoURL: https://github.com/kjha27/cldcvr.git
     targetRevision: main
   syncPolicy:
