--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -2,19 +2,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: loki
-  namespace:  argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
+  name: loki-stack
+  namespace: default
 spec:
+  destination:
+    namespace: default
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    path: ./observablity/Grafana/loki-stack/
+    repoURL: https://github.com/kjha27/cldcvr.git
+    targetRevision: main
   syncPolicy:
     automated:
       prune: true
-  destination:
-    namespace:  argocd
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    path: helm-charts/charts/loki-stack/
-    repoURL: https://github.com/kunal2791/cldcvr.git
-    targetRevision: main
+      selfHeal: true
