--- a/apps/cluster-autoscaler.yaml
+++ b/apps/cluster-autoscaler.yaml
@@ -10,7 +10,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: ./cluster-autoscaler/
+    path: cluster-autoscaler/
     repoURL: https://github.com/kjha27/cldcvr.git
     targetRevision: main
   syncPolicy:
