--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -6,11 +6,11 @@ metadata:
   namespace: default
 spec:
   destination:
-    namespace: default
+    namespace: default234
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: ./observablity/Grafana/loki-stack/
+    path: observablity/Grafana/loki-stack/
     repoURL: https://github.com/kjha27/cldcvr.git
     targetRevision: main
   syncPolicy:
