--- a/apps/prom.yaml
+++ b/apps/prom.yaml
@@ -10,7 +10,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: ./observablity/Grafana/kube-prometheus-stack/
+    path: observablity/Grafana/kube-prometheus-stack/
     repoURL: https://github.com/kjha27/cldcvr.git
     targetRevision: main
   syncPolicy:
