updated argo apps

--- a/apps/prom.yaml
+++ b/apps/prom.yaml
@@ -3,10 +3,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kube-prometheus-stack
-  namespace: default
+  namespace: argocd
 spec:
   destination:
-    namespace: default
+    namespace: observability
     server: https://kubernetes.default.svc
   project: default
   source:
