--- a/apps/cluster-autoscaler.yaml
+++ b/apps/cluster-autoscaler.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: matrix-server
-  namespace: default
+  namespace: argocd
 spec:
   destination:
     namespace: default
