--- a/apps/ingress-controller.yaml
+++ b/apps/ingress-controller.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: ingress-controller
-  namespace: default
+  namespace: argocd
 spec:
   destination:
     namespace: default
