--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -3,10 +3,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: loki-stack
-  namespace: default
+  namespace: argocd
 spec:
   destination:
-    namespace: default234
+    namespace: observability
     server: https://kubernetes.default.svc
   project: default
   source:
