--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: loki-stack
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: observability
