--- a/apps/tempo.yaml
+++ b/apps/tempo.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: tempo
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: observability
