--- a/apps/cluster-autoscaler.yaml
+++ b/apps/cluster-autoscaler.yaml
@@ -2,20 +2,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: matrix-server
-  namespace: argocd
+  name: clusterautoscaler
+  namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  destination:
-    namespace: default
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    path: cluster-autoscaler/
-    repoURL: https://github.com/kjha27/cldcvr.git
-    targetRevision: main
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+  destination:
+    namespace:  default
+    server: 'https://kubernetes.default.svc'
+  project: default
+  source:
+    path: cluster-autoscaler/
+    repoURL: https://github.com/kunal2791/cldcvr.git
+    targetRevision: main
