--- a/apps/ingress-controller.yaml
+++ b/apps/ingress-controller.yaml
@@ -1,20 +1,20 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress-controller
-  namespace: argocd
+  name: ingresscontroller
+  namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  destination:
-    namespace: default
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    path: ingress-nginx/charts/ingress-nginx/
-    repoURL: https://github.com/kjha27/cldcvr.git
-    targetRevision: main
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+  destination:
+    namespace:  argocd
+    server: 'https://kubernetes.default.svc'
+  project: default
+  source:
+    path: ingress-nginx/charts/ingress-nginx/
+    repoURL: https://github.com/kunal2791/cldcvr.git
+    targetRevision: main
