--- a/apps/prom.yaml
+++ b/apps/prom.yaml
@@ -3,19 +3,18 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kube-prometheus-stack
-  namespace: argocd
+  namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  destination:
-    namespace: observability
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    path: observablity/Grafana/kube-prometheus-stack/
-    repoURL: https://github.com/kjha27/cldcvr.git
-    targetRevision: main
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+  destination:
+    namespace:  argocd
+    server: 'https://kubernetes.default.svc'
+  project: default
+  source:
+    path: observablity/Grafana/kube-prometheus-stack/
+    repoURL: https://github.com/kunal2791/cldcvr.git
+    targetRevision: main
