--- a/apps/prom.yaml
+++ b/apps/prom.yaml
@@ -1,20 +1,20 @@
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: kube-prometheus-stack
-#   namespace:  argocd
-#   finalizers:
-#   - resources-finalizer.argocd.argoproj.io
-# spec:
-#   syncPolicy:
-#     automated:
-#       prune: true
-#   destination:
-#     namespace:  argocd
-#     server: 'https://kubernetes.default.svc'
-#   project: default
-#   source:
-#     path: observablity/Grafana/kube-prometheus-stack/
-#     repoURL: https://github.com/kunal2791/cldcvr.git
-#     targetRevision: main
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: kube-prometheus-stack
+  namespace:  argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  syncPolicy:
+    automated:
+      prune: true
+  destination:
+    namespace:  argocd
+    server: 'https://kubernetes.default.svc'
+  project: default
+  source:
+    path: observablity/Grafana/kube-prometheus-stack/
+    repoURL: https://github.com/kunal2791/cldcvr.git
+    targetRevision: main
