--- a/observablity/Grafana/kube-prometheus-stack/charts/grafana/values.yaml
+++ b/observablity/Grafana/kube-prometheus-stack/charts/grafana/values.yaml
@@ -552,7 +552,7 @@ datasources:
    datasources:
     - name: Tempo
       type: tempo
-      url: http://tempo.observability.svc.cluster.local:3100
+      url: http://tempo:3100
       access: proxy
     - name: Prometheus
       type: prometheus
@@ -560,7 +560,7 @@ datasources:
       access: proxy
     - name: Loki
       type: loki
-      url: http://loki.observability.svc.cluster.local:3100
+      url: http://loki-stack:3100
       access: proxy
       jsonData:
           derivedFields:
