--- a/observablity/Grafana/kube-prometheus-stack/charts/grafana/values.yaml
+++ b/observablity/Grafana/kube-prometheus-stack/charts/grafana/values.yaml
@@ -560,7 +560,7 @@ datasources:
       access: proxy
     - name: Loki
       type: loki
-      url: http://loki-stack:3100
+      url: http://lokistack:3100
       access: proxy
       jsonData:
           derivedFields:
