nginx ingress graph

--- a/ingress-nginx/charts/ingress-nginx/values.yaml
+++ b/ingress-nginx/charts/ingress-nginx/values.yaml
@@ -684,7 +684,7 @@ controller:
   # mounted volume.
 
   opentelemetry:
-    enabled: false
+    enabled: true
     name: opentelemetry
     image:
       registry: registry.k8s.io
@@ -821,11 +821,11 @@ controller:
     port: 10254
     portName: metrics
     # if this port is changed, change healthz-port: in extraArgs: accordingly
-    enabled: false
+    enabled: true
     service:
-      annotations: {}
-      # prometheus.io/scrape: "true"
-      # prometheus.io/port: "10254"
+      annotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "10254"
       # -- Labels to be added to the metrics service resource
       labels: {}
       # clusterIP: ""
@@ -841,7 +841,7 @@ controller:
       # externalTrafficPolicy: ""
       # nodePort: ""
     serviceMonitor:
-      enabled: false
+      enabled: true
       additionalLabels: {}
       annotations: {}
       ## The label to use to retrieve the job name from.
